[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/font/default_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/backdrop-city.png" type="Texture" id=2]
[ext_resource path="res://src/player/Pilot.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/backdrop-fire.png" type="Texture" id=4]
[ext_resource path="res://src/building/Building1.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Main.gd" type="Script" id=6]
[ext_resource path="res://src/kaiju/Jupiter.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=3]
resource_name = "mount_zoom"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ), Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 484, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 362 )

[sub_resource type="Animation" id=4]
resource_name = "end"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/UI/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "end_good"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/UI/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective" type="Label" parent="CanvasLayer/UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -11.0
margin_right = 269.0
margin_bottom = 13.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = ExtResource( 1 )
text = "10 buildings left"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpText" type="Label" parent="CanvasLayer/UI"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -10.0
margin_right = 269.0
margin_bottom = 16.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = ExtResource( 1 )
text = "Press ? for help"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, -4 )
motion_scale = Vector2( 0.1, 1 )

[node name="Fire" type="Sprite" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2( 0, 3 )
texture = ExtResource( 4 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )

[node name="City" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 0, 3 )
texture = ExtResource( 2 )

[node name="Buildings" type="Node2D" parent="."]
position = Vector2( 0, 28 )

[node name="Building1-1" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 31, 0 )

[node name="Building1-2" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( -40, 0 )

[node name="Building1-3" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 62, 3 )

[node name="Building1-4" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( -131, 3 )

[node name="Building1-5" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( -179, 0 )

[node name="Building1-6" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 148, 0 )

[node name="Building1-7" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 110, 4 )

[node name="Building1-8" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( -224, 0 )

[node name="Building1-9" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 199, 0 )

[node name="Building1-10" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 282, 0 )

[node name="Building1-11" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( -157, 3 )

[node name="Building1-12" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 346, 0 )

[node name="Building1-13" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 252, 4 )

[node name="Building1-14" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 413, 4 )

[node name="Building1-15" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( -332, 4 )

[node name="Building1-16" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( -255, 1 )

[node name="Building1-17" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 320, 1 )

[node name="Building1-18" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( -293, -1 )

[node name="Building1-19" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 178, 8 )

[node name="Building1-20" parent="Buildings" instance=ExtResource( 5 )]
position = Vector2( 379, 0 )

[node name="Kaijus" type="Node2D" parent="."]
position = Vector2( -1, 28 )

[node name="Jupiter" parent="Kaijus" instance=ExtResource( 8 )]
position = Vector2( 20, 0 )

[node name="Jupiter2" parent="Kaijus" instance=ExtResource( 8 )]
position = Vector2( -73, 0 )

[node name="Jupiter3" parent="Kaijus" instance=ExtResource( 8 )]
position = Vector2( -407, 0 )

[node name="Jupiter4" parent="Kaijus" instance=ExtResource( 8 )]
position = Vector2( 230, 0 )

[node name="Pilot" parent="." instance=ExtResource( 3 )]
position = Vector2( 28, -61 )
z_index = 2

[node name="Camera2D" type="Camera2D" parent="Pilot"]
position = Vector2( 0, -7 )
current = true
zoom = Vector2( 0.9, 0.9 )
limit_left = -436
limit_top = -52
limit_right = 436
limit_bottom = 28
smoothing_enabled = true
drag_margin_top = 1.0
drag_margin_bottom = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pilot/Camera2D"]
anims/mount_zoom = SubResource( 3 )

[node name="Floor" type="StaticBody2D" parent="." groups=[
"floor",
]]
position = Vector2( 0, 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="Wall1" type="StaticBody2D" parent="." groups=[
"floor",
]]
position = Vector2( -458, 33 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall1"]
position = Vector2( 0, -362 )
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="." groups=[
"floor",
]]
position = Vector2( 459, 33 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2( 0, -362 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/end = SubResource( 4 )
anims/end_good = SubResource( 5 )
[connection signal="mounted" from="Pilot" to="." method="_on_Pilot_mounted"]
[connection signal="unmounted" from="Pilot" to="." method="_on_Pilot_unmounted"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
